--- a/job/viewCompany.html
+++ b/job/viewCompany.html
@@ -175,7 +175,7 @@
 
         </section>
 
-        <div class="credit">&copy; copyright @2024 by <span>codSoft</span>| all rights reserved!</div>
+        <div class="credit">&copy; copyright @2024 by <span>codSoft</span>| all rights reserved! ~Divya Kumari</div>
     </footer>
 
 
