--- a/job/view_job.html
+++ b/job/view_job.html
@@ -121,7 +121,7 @@
 
         </section>
 
-        <div class="credit">&copy; copyright @2024 by <span>codSoft</span>| all rights reserved!</div>
+        <div class="credit">&copy; copyright @2024 by <span>codSoft</span>| all rights reserved! ~Divya Kumari</div>
     </footer>
 
 
